+ Port to Windows, + config, + reverse proxy alpha

--- a/pages/about.html
+++ b/pages/about.html
@@ -31,7 +31,7 @@
             margin: 0px 25px 0px 25px;
         }
 
-        p {
+        li, p {
             font-family: Tahoma;
             padding: 5px 25px 5px 25px;
             width: 800px;
@@ -61,24 +61,37 @@
         <h1>Xameleon Web Server</h1>
         <br>
         <div style="float:left; width: 20%; padding-left: 25px">
-            <img src="spiderwithweb.svg" alt="Web" class="avatar">
+            <img src="img/spiderwithweb.svg" alt="Web" class="avatar">
         </div>
         <div style="float:right; width:70%">
-            <br>
-            <br>
-            <p>
-                Вы находитесь на сайте программной библиотеки для разработки легковесных REST сервисов на языке С++. Эта страница отдана браузеру с помощью Xameleon-Web-Server,
-                который является демонстрационной программой и одновременно тестами для библиотеки. Текущий статус библиотеки - альфа-версия.
+            <br/>
+            <br/>
+            <p><b>Вы находитесь на сайте компонета для разработки легковесных REST сервисов.</b><br/><br/>
+                <ul>
+                <li>Копмонент реализован на языке С++</li>
+		<li>Эта страница отдана браузеру с помощью Xameleon-Web-Server</li>
+                <li>Этот сервер является демонстрационной программой и одновременно тестами для библиотеки</li>
+		<li>Cтатус библиотеки: альфа-версия</li>
+                </ul>
             </p>
-            <br>
             <p>
-                Исходный код проекта на <a href="https://github.com/mandrookin/XameleonWeb">github.com</a>.<br>
-            </p>
-            <br>
-            <p>
-                <a href="/">Вернуться на главную страницу</a>
-            </p>
+                Исходный код проекта находится на <a href="https://github.com/mandrookin/XameleonWeb">github.com</a>.<br/>
+		<a href="/admin/admin_header.html ">"Администратор сайта"</a> - здесь можно увидеть различную техническую информацию. 
+            </p><br/>
+            <!--p>
+                Кое-что для теста тут <a href="proxy">страница теста прокси</a>.<br>
+            </p-->
+            <br/>
         </div>
+    </div>
+    <div style="clear:both">
+        <p>Роботы видят web.l4os.ru так:</p>
+        <div style="padding: 25px">
+           <img src="img/stat.jpg" style="max-width: 100%; height: auto;">
+        </div>
+    </div>
+    <div>
+       <p><a href="/">Вернуться на главную страницу</a><br/><br/></p>
     </div>
 </body>
 </html>
