--- a/pages/admin/admin_header.html
+++ b/pages/admin/admin_header.html
@@ -18,7 +18,8 @@ function setFrame(frame) {
         <button type="button" class="button3" onclick="setFrame('/admin/peers');">Адреса</button>
         <button type="button" class="button3" onclick="setFrame('/admin/references');">Ссылки</button>
         <button type="button" class="button3" onclick="setFrame('/upload');">Файлы</button>
-        <a href="/"><button type='submit' class='button3'>Выйти</button></a>
+        &nbsp;&nbsp;<a href="/">Вернуться на главную страницу</a>
+        <!-- a href="/"><button type='submit' class='button3'>Выйти</button></a -->
         </div>
     </div>
     <div>
