--- a/pages/index.html
+++ b/pages/index.html
@@ -35,6 +35,7 @@
         }
 
         p {
+            font-family: Tahoma;
             padding: 5px 25px 5px 25px;
             width: 800px;
             height: auto;
@@ -74,6 +75,12 @@
         </table>
     </h1>
     <br />
+    <p>
+        <br /><b>index.html</b> - так называется веб-страница "по умолчанию". Страница, которая отдаётся веб-сервером при обращении к сайту по доменному имени. <br /><br />
+        А этот сайт так странно выглядит потому, что это не более чем тест. Ну ладно, чуть более чем тест. И немного демонстраций возможностей.
+        На кнопки, которые расположены чуть ниже, можно клмкать мышкой.
+    </p>
+    <br/>
     <div>
         <center style="margin-bottom: 10px; margin-top: 10px">
             <button type="button" class="button3" onclick="location.href='about.html'">О сервере</button>
@@ -83,6 +90,7 @@
             <button type="button" class="button3" onclick="location.href='login.html'">Войти</button>
         </center>
     </div>
+    <p><br><b>Некоторые цитаты некоторых писателей</b></p>
     <p>
         <br />&emsp;
         “Опыты показали, что при должном количестве  хороших  перелетов  и  форм
@@ -100,60 +108,64 @@
         утра был уже в самолете. Приземлился в Ипо как раз к завтраку, посетил две
         плантации, один рудник, еще одну плантацию (масличных пальм) и  консервный
         завод. После званого обеда в  деловом  клубе  осмотрел  школу,  клинику  и
-        английский сеттльмент. Вечером был на двух приемах и на китайском  <span style="color: #FF7A59">банкете</span>
-        из двадцати блюд, где пили стаканами бренди. Деловые  переговоры  начались
+        английский сеттльмент. Вечером был на двух приемах и <span style="color: #FF7A59">
+            на китайском банкете
+            из двадцати блюд
+        </span>, где пили стаканами бренди. Деловые  переговоры  начались
         на следующее утро и продолжались три дня, а оживляли их официальные приемы
         и ежевечерние банкеты в восточном стиле. Уже на пятый день стало ясно, что
         курс тяжеловат, так как гость не мог ходить, если его  не  вели  под  руки
         секретарь и личный помощник. На шестой день он умер, подтвердив тем  самым
         разговоры о том, что ему  не  по  себе.  В  наше  время  такие  методы  не
         рекомендуются, да они и не нужны. Народ научился уходить вовремя.”
-        <p style="text-align:right">
+    <p style="text-align:right">
         <a href="https://ru.wikipedia.org/wiki/Законы_Паркинсона" target="_blank">Законы Паркинсона</a>
-        </p>
     </p>
-    <br/><br/><br/>
+    </p>
+    <br /><br /><br />
     <p>
         <br />&emsp;
-   “- Я видел, как ужинал сам король Иаков; это было в Банкетинг-Хаузе, где по стенам висят картины знаменитого Рубенса; 
-   его величество даже не притронулся ни к чему. А этот нищий знай набивает себе живот! Недаром "живот" и "животное" - слова одного корня. 
-   И дернула же меня нелегкая забраться в этот Уэймет, чтоб ему провалиться! С самого утра ничего не продал, 
-   краснобайствовал перед снегом, играл на флейте для урагана, не заработал ни одного фартинга, а вечером тут как тут - нищие! 
-   Ну и гнусный край! Только и знаешь, что с дураками прохожими состязаться, кто кого надует! Они стараются отделаться от меня жалкими грошами, 
-   а я стараюсь всучить им какое-нибудь целительное снадобье. Но сегодня, как назло, - ничего, решительно ничего! 
-   Ни одного болвана на перекрестке, ни одного пенни в кассе!”
-   <p style="text-align:right">
-   <a href="https://ru.wikipedia.org/wiki/Человек,_который_смеётся" target="_blank">Виктор Гюго «Человек, который смеётся»</a>
-   </p>
-</p>
-<br/><br/><br/>
- <p>
+        “- Я видел, как ужинал сам король Иаков; это было в Банкетинг-Хаузе, где по стенам висят картины знаменитого Рубенса;
+        <span style="color: #FF7A59">его величество даже не притронулся ни к чему</span>. А этот нищий знай набивает себе живот! Недаром "живот" и "животное" - слова одного корня.
+        И дернула же меня нелегкая забраться в этот Уэймет, чтоб ему провалиться! С самого утра ничего не продал,
+        краснобайствовал перед снегом, играл на флейте для урагана, не заработал ни одного фартинга, а вечером тут как тут - нищие!
+        Ну и гнусный край! Только и знаешь, что с дураками прохожими состязаться, кто кого надует! Они стараются отделаться от меня жалкими грошами,
+        а я стараюсь всучить им какое-нибудь целительное снадобье. Но сегодня, как назло, - ничего, решительно ничего!
+        Ни одного болвана на перекрестке, ни одного пенни в кассе!”
+    <p style="text-align:right">
+        <a href="https://ru.wikipedia.org/wiki/Человек,_который_смеётся" target="_blank">Виктор Гюго «Человек, который смеётся»</a>
+    </p>
+    </p>
+    <br /><br /><br />
+    <p>
         <br />&emsp;
-   "Дом, в котором жил отец Тома, помещался в грязнейшей трущобе, именуемой Оффаль-Корт, за Пуддинг-Лэном. Это была небольшая, 
-   полуразвалившаяся лачуга, битком набитая бедняками. Семейство Канти занимало комнату на третьем этаже. В углу у отца с матерью 
-   было прилажено нечто вроде постели; что же касается Тома, его бабушки и двух сестер, Бетти и Наин, то они не были так ограничены 
-   в своих владениях, как супруги Канти: в их распоряжении оставался весь пол, и они могли спать, где им заблагорассудится. Им же 
-   принадлежали обрывки двух-трех одеял и несколько охапок старой полусгнившей соломы; но при всем желании этот хлам никак нельзя 
-   было назвать постелями. На день все это сваливалось куда-нибудь в угол, в одну общую кучу, а на ночь разбиралось младшими членами 
-   семьи для спанья."
-   <p style="text-align:right">
+        "Дом, в котором жил отец Тома, помещался в грязнейшей трущобе, именуемой Оффаль-Корт, за Пуддинг-Лэном. Это была небольшая,
+        полуразвалившаяся лачуга, битком набитая бедняками. Семейство Канти занимало комнату на третьем этаже. В углу у отца с матерью
+        было прилажено нечто вроде постели; что же касается Тома, его бабушки и двух сестер, Бетти и Наин, то они не были так ограничены
+        в своих владениях, как супруги Канти: в их распоряжении оставался весь пол, и они могли спать, где им заблагорассудится. Им же
+        принадлежали обрывки двух-трех одеял и несколько охапок старой полусгнившей соломы; но при всем желании <span style="color: #FF7A59">
+            этот хлам никак нельзя
+            было назвать постелями
+        </span>. На день все это сваливалось куда-нибудь в угол, в одну общую кучу, а на ночь разбиралось младшими членами
+        семьи для спанья."
+    <p style="text-align:right">
         <a href="https://ru.wikipedia.org/wiki/Принц_и_нищий" target="_blank">Марк Твен «Принц и нищий»</a>
-   </p>
-</p>
-<br/><br/><br/>
+    </p>
+    </p>
+    <br /><br /><br />
 
-   <p>Едва кондуктор выговорил эти слова, как перед самым носом дяди появился молодой джентльмен в напудренном парике и небесно-голубом кафтане с серебряными галунами и очень широкими фалдами на холщовой подкладке. Тиггин и Уэллс, джентльмены, торговали набивными тканями и жилетами, и, стало быть, мой дядя сразу разобрался во всех этих материях. На нем были короткие штаны, какие-то странные гамаши, подвернутые над шелковыми чулками, туфли с пряжками, кружевные манжеты, на голове треуголка, а сбоку длинная шпага, суживающаяся к концу. Жилет спускался ему на бедра, а концы галстука доходили до пояса. Он торжественно приблизился к дверце кареты, снял шляпу и держал ее над головой в вытянутой руке, оттопырив мизинец, как это делают иные жеманные люди, поднося к губам чашку чаю; затем он щелкнул каблуками, важно отвесил низкий поклон и протянул левую руку. Дядя хотел было шагнуть вперед и крепко пожать ее, как вдруг заметил, что эти знаки внимания относились не к нему, а к молодой леди в старомодном зеленом бархатном платье с длинной талией и корсажем, внезапно появившейся у подножки кареты. Вместо шляпы, джентльмены, ее голову покрывал черный шелковый капюшон. Собираясь сесть в карету, она на секунду оглянулась, и такого красивого личика, как у нее, дядя никогда не видывал даже на картинках. Она села в карету, придерживая одной рукой платье; и, — как говаривал мой дядя, подкрепляя свои слова ругательством, когда рассказывал эту историю, — он ни за что бы не поверил, что могут быть на свете такие прелестные ножки, если бы не видел их собственными глазами. Но когда мелькнуло перед ним это прекрасное лицо, дядя заметил, что молодая леди бросила на него умоляющий взгляд и казалась испуганной и огорченной. Увидел он также, что молодой человек в напудренном парике, несмотря на всю свою показную галантность, весьма утонченную и благородную, крепко схватил молодую леди за руку, когда она садилась в карету, и влез тотчас же вслед за ней. С ними отправлялся на редкость безобразный человек в прилизанном коричневом парике, в лиловом костюме, в сапогах, доходивших до бедер, и с очень большим палашом. А когда он уселся рядом с молодой леди, которая забилась в угол, подальше от него, дядя утвердился в первоначальной своей догадке, что тут происходит нечто мрачное и таинственное, или, как он сам говаривал: тут что-то развинтилось. Остается только удивляться, с какой быстротой он принял решение в случае опасности помочь молодой леди, если она будет нуждаться в помощи.</p>
-   <p>— Смерть и молния! — воскликнул молодой джентльмен, хватаясь за шпагу, когда дядя влез в карету.</p>
-   <p>— Кровь и гром! — заревел другой джентльмен.</p>
-   <p>С этими словами он выхватил свой палаш и без лишних церемоний сделал выпад против дяди. У дяди не было при себе оружия, но он очень ловко сорвал с головы безобразного джентльмена треуголку и, насадив ее на кончик его палаша, крепко зажал руками и не отпускал.</p>
-   <p>— Проколите его сзади! — крикнул безобразный джентльмен своему спутнику, пытаясь высвободить палаш.</p>
-   <p>— Не советую! — отозвался дядя, грозно поднимая ногу. — Я мозги у него вышибу или голову ему проломлю, если мозгов у него нет.</p>
-   <p style="text-align:right">
+    <p>Едва кондуктор выговорил эти слова, как перед самым носом дяди появился молодой джентльмен в напудренном парике и небесно-голубом кафтане с серебряными галунами и очень широкими фалдами на холщовой подкладке. Тиггин и Уэллс, джентльмены, торговали набивными тканями и жилетами, и, стало быть, мой дядя сразу разобрался во всех этих материях. На нем были короткие штаны, какие-то странные гамаши, подвернутые над шелковыми чулками, туфли с пряжками, кружевные манжеты, на голове треуголка, а сбоку длинная шпага, суживающаяся к концу. Жилет спускался ему на бедра, а концы галстука доходили до пояса. Он торжественно приблизился к дверце кареты, снял шляпу и держал ее над головой в вытянутой руке, оттопырив мизинец, как это делают иные жеманные люди, поднося к губам чашку чаю; затем он щелкнул каблуками, важно отвесил низкий поклон и протянул левую руку. Дядя хотел было шагнуть вперед и крепко пожать ее, как вдруг заметил, что эти знаки внимания относились не к нему, а к молодой леди в старомодном зеленом бархатном платье с длинной талией и корсажем, внезапно появившейся у подножки кареты. Вместо шляпы, джентльмены, ее голову покрывал черный шелковый капюшон. Собираясь сесть в карету, она на секунду оглянулась, и такого красивого личика, как у нее, дядя никогда не видывал даже на картинках. Она села в карету, придерживая одной рукой платье; и, — как говаривал мой дядя, подкрепляя свои слова ругательством, когда рассказывал эту историю, — он ни за что бы не поверил, что могут быть на свете такие прелестные ножки, если бы не видел их собственными глазами. Но когда мелькнуло перед ним это прекрасное лицо, дядя заметил, что молодая леди бросила на него умоляющий взгляд и казалась испуганной и огорченной. Увидел он также, что молодой человек в напудренном парике, несмотря на всю свою показную галантность, весьма утонченную и благородную, крепко схватил молодую леди за руку, когда она садилась в карету, и влез тотчас же вслед за ней. С ними отправлялся на редкость безобразный человек в прилизанном коричневом парике, в лиловом костюме, в сапогах, доходивших до бедер, и с очень большим палашом. А когда он уселся рядом с молодой леди, которая забилась в угол, подальше от него, дядя утвердился в первоначальной своей догадке, что тут происходит нечто мрачное и таинственное, или, <span style="color: #FF7A59">как он сам говаривал: тут что-то развинтилось</span>. Остается только удивляться, с какой быстротой он принял решение в случае опасности помочь молодой леди, если она будет нуждаться в помощи.</p>
+    <p>— Смерть и молния! — воскликнул молодой джентльмен, хватаясь за шпагу, когда дядя влез в карету.</p>
+    <p>— Кровь и гром! — заревел другой джентльмен.</p>
+    <p>С этими словами он выхватил свой палаш и без лишних церемоний сделал выпад против дяди. У дяди не было при себе оружия, но он очень ловко сорвал с головы безобразного джентльмена треуголку и, насадив ее на кончик его палаша, крепко зажал руками и не отпускал.</p>
+    <p>— Проколите его сзади! — крикнул безобразный джентльмен своему спутнику, пытаясь высвободить палаш.</p>
+    <p>— Не советую! — отозвался дядя, грозно поднимая ногу. — Я мозги у него вышибу или голову ему проломлю, если мозгов у него нет.</p>
+    <p style="text-align:right">
         <a href="https://ru.wikipedia.org/wiki/Посмертные_записки_Пиквикского_клуба" target="_blank">Чарльз Диккенс «Посмертные записки Пиквикского клуба»</a>
-   <p/>
-   <p></p>
+    <p />
+    <p></p>
 
-    <br/>
+    <br />
     <div>
         <table align="right" style="padding-right: 15px; margin-right: 20px; ">
             <tr>
@@ -175,24 +187,38 @@
         </table>
         <br />
     </div>
-    <br/>
+    <br />
 </body>
 </html>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <script type="text/javascript">
+
+    var counter;
+
     $(document).ready(function () {
+        var td = document.getElementById('time');
+        counter = parseInt(td.innerHTML);
         setInterval(timer, 1000);
     });
 
 
     function timer() {
         var td = document.getElementById('time');
-        var time = parseInt(td.innerHTML);
-        time++;
-        td.innerHTML = time + ' сек';
+        counter++;
+	var tm = counter;
+        var result = '';
+
+	if(tm > 60) {
+           result += parseInt(tm / 60) + ' мин ';
+           tm %= 60;   
+        }
+        
+	result += tm + ' сек';
+	
+        td.innerHTML = result;
         var speed = parseInt(document.getElementById('speed').innerHTML);
         var data = document.getElementById("result");
-        let v = speed / 3600 * time;  //120 / 60 / 60 * 100;
+        let v = speed / 3600 * counter;  //120 / 60 / 60 * 100;
         data.innerHTML = v.toFixed(2) + ' км';
     }
 </script>
