--- a/pages/admin/default.html
+++ b/pages/admin/default.html
@@ -4,10 +4,11 @@
 </head>
 <body>
     <div style="width=100%">
-        <div style="float:left; width:10%">
-            <img src="/mono-folder-html.svg" alt="Web" class="avatar">
+        <div style="float:left; width:20%">
+            <br/>
+            <img src="../img/warning.svg" alt="Web" class="avatar">
         </div>
-        <div style="float:right; width: 80%; padding-left: 25px">
+        <div style="float:right; width:75%; padding-left: 25px">
             <br/>Это тестовая страница с правами редактора. Включен режим отладки.
             <h2>Внимание!<br/>Если продолжишь - информация о твоём IP-адресе может быть показана другим пользователям!<br/></h2>
         </div>
