--- a/pages/index.html
+++ b/pages/index.html
@@ -56,6 +56,7 @@
             box-shadow: 3px 3px 1px #888888;
             margin-left: 10px;
             margin-right: 10px;
+            cursor: pointer;
         }
     </style>
 </head>
